--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -79,7 +79,7 @@
         transition: background-color 0.2s ease;
 
         &:focus {
-          background-color: rgba(255, 255, 255, 0.15);
+          background-color: var(--color-background-highlight);
         }
 
         &::placeholder {
@@ -131,5 +131,45 @@
         color: var(--color-primary);
       }
     }
+  }
+
+  [dir='rtl'] & {
+    .leftSection {
+      margin-right: 0;
+      margin-left: auto;
+    }
+
+    .searchIcon {
+      left: initial;
+      right: 1.2rem;
+    }
+
+    .rightSection {
+      flex-direction: row-reverse;
+    }
+  }
+}
+
+.username {
+  font-family: var(--font-secondary);
+  font-size: 1.4rem;
+  color: var(--color-text-base);
+  margin-right: 1.6rem;
+  font-weight: 500;
+}
+
+.logoutButton {
+  padding: 0.8rem 2rem;
+  border-radius: 2.3rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  transition: all 0.2s ease;
+  background-color: var(--color-background-elevated);
+  color: var(--color-text-base);
+  border: 1px solid var(--color-border);
+
+  &:hover {
+    background-color: var(--color-background-highlight);
+    transform: scale(1.04);
   }
 }
