--- a/src/app/spotify/album/[albumId]/page.module.scss
+++ b/src/app/spotify/album/[albumId]/page.module.scss
@@ -77,20 +77,20 @@
       height: 5.6rem;
       border-radius: 50%;
       background-color: var(--color-primary);
-      color: var(--color-text-base);
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: transform 0.2s ease;
+      transition: all 0.2s ease;
 
       &:hover {
         transform: scale(1.04);
+        background-color: var(--color-text-bright-accent);
       }
 
-      svg {
+      .playIcon {
         width: 2.4rem;
         height: 2.4rem;
-        margin-left: 0.4rem;
+        filter: var(--icon-filter);
       }
     }
   }
@@ -98,7 +98,7 @@
   .trackList {
     .trackHeader {
       display: grid;
-      grid-template-columns: 4rem 1fr 4rem;
+      grid-template-columns: 4rem 1fr 4rem 4rem;
       padding: 0 1.6rem;
       margin-bottom: 1.6rem;
       border-bottom: 1px solid var(--color-border);
@@ -119,17 +119,42 @@
 
     .trackItem {
       display: grid;
-      grid-template-columns: 4rem 1fr 4rem;
+      grid-template-columns: 4rem 1fr 4rem 4rem;
       padding: 0.8rem 1.6rem;
       border-radius: 0.4rem;
       cursor: pointer;
+      align-items: center;
 
       &:hover {
         background-color: var(--color-opacity-hover);
+
+        .trackNumber {
+          display: none;
+        }
+
+        .playButton {
+          display: flex;
+        }
       }
 
       .trackNumber {
         color: var(--color-text-subdued);
+      }
+
+      .playButton {
+        display: none;
+        background: none;
+        border: none;
+        padding: 0;
+        cursor: pointer;
+        width: 1.6rem;
+        height: 1.6rem;
+
+        img {
+          width: 100%;
+          height: 100%;
+          filter: var(--icon-filter);
+        }
       }
 
       .trackInfo {
