--- a/src/components/Player/Player.module.scss
+++ b/src/components/Player/Player.module.scss
@@ -60,8 +60,8 @@
   width: 4rem;
   height: 4rem;
   border-radius: 50%;
-  background-color: var(--color-text-base);
-  color: var(--color-background);
+  background-color: var(--color-primary);
+  color: var(--color-text-base);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -81,15 +81,6 @@
   }
 }
 
-.shuffleButton {
-  color: var(--color-text-subdued);
-  transition: color 0.2s ease;
-
-  &:hover {
-    color: var(--color-text-base);
-  }
-}
-
 .progressBar {
   width: 100%;
   display: flex;
@@ -106,7 +97,7 @@
 .progress {
   flex: 1;
   height: 0.4rem;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: var(--color-opacity);
   border-radius: 0.2rem;
   position: relative;
   cursor: pointer;
@@ -135,7 +126,11 @@
 }
 
 .volumeButton {
-  color: var(--color-text-subdued);
+  background-color: var(--color-primary);
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  color: var(--color-primary);
   transition: color 0.2s ease;
 
   &:hover {
@@ -146,7 +141,7 @@
 .volumeSlider {
   width: 9.6rem;
   height: 0.4rem;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: var(--color-opacity);
   border-radius: 0.2rem;
   position: relative;
   cursor: pointer;
