--- a/src/app/spotify/artist/all/page.module.scss
+++ b/src/app/spotify/artist/all/page.module.scss
@@ -3,10 +3,11 @@
 }
 
 .section {
-  margin-bottom: 4.8rem;
+  margin-bottom: 32px;
+  transition: opacity 0.2s ease;
 
-  &:last-child {
-    margin-bottom: 0;
+  &:hover {
+    opacity: 0.7;
   }
 }
 
@@ -17,10 +18,53 @@
   margin-bottom: 2.4rem;
 }
 
+.sectionHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  padding: 16px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  border-radius: 4px;
+
+  &:hover {
+    background-color: var(--color-background-elevated);
+    color: var(--color-background-base);
+
+    .chevron {
+      opacity: 0.7;
+    }
+  }
+}
+
+.chevron {
+  transition: transform 0.3s ease;
+  transform: rotate(180deg);
+  opacity: 0.5;
+
+  &.expanded {
+    transform: rotate(0deg);
+  }
+}
+
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-  gap: 2.4rem;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  gap: 24px;
+  padding: 16px;
+  animation: fadeIn 0.3s ease;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .loading,
